--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Habit</string>
+    <string name="tip_drag">长按编辑,拖拽排序</string>
+    <string name="my_cahnnel">我的习惯</string>
+    <string name="other_channel">推荐习惯</string>
+    <string name="edit">编辑</string>
+    <string name="add">创建</string>
+    <string name="finish">完成</string>
 </resources>
