--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Habit</string>
+    <string name="app_name">心习惯</string>
     <string name="tip_drag">长按编辑,拖拽排序</string>
     <string name="my_cahnnel">我的习惯</string>
     <string name="other_channel">推荐习惯</string>
